mais uns ajustes

--- a/html/index.html
+++ b/html/index.html
@@ -9,22 +9,25 @@
 <body>
     <header>
         <div id="imagem">
-            <img height="200px" src="../img/IMG_1116.jpg" alt="">
+        
         </div>
         <div id="nome">
             <h1>Luy Choyan</h1>
             <p>Desenvolvedor Flutter</p>
         </div>
         <div id="redes-sociais">
-            <p>aqui fica as redes sociais</p>
+            <a href="https://www.facebook.com/luychoyan" target="_blank"><img src="../img/face.ico" alt="facebook"></a>
+            <a href="https://www.instagram.com/luy_choyan/" target="_blank"><img src="../img/insta.ico" alt="instagram"></a>
+            <a href="https://www.linkedin.com/in/luy-choyan-siqueira-aa11a2226/" target="_blank"><img src="../img/linkedin.ico" alt="linkedin"></a>
+            <a href="https://github.com/luychoyan" target="_blank"><img src="../img/github.ico" alt="github"></a>
         </div>
     </header>
     <main>
         <div>
-            <p>Sobre mim...</p>
+            <h2>Sobre mim...</h2>
         </div>
         <div>
-            <p>Me chamo Luy Choyan, tenho 25 anos, e começei na area da TI em abril de 2023. Mudei da area da saúde para a área da tecnologia pois a tecnologia sempre me chamaou a atenção, eu com 13/14 anos ja montava e desmontava um pc por completo. Depois de quase 10 anos montando meu pc devagarinho, pois sou desemprego, montei meu pc dos sonhos, então resolvi usar meu computador como minha ferramenta de trabalho, então resolvi estudar e mudar para a area da TI. Descidi entao entrar para a area Mobile, pois no futuro, homem e máquina serão um, tendo em vista que hoje em dia, não podemos ficar sem um dispositivo movel, os celulares ja é praticamente uma extenção de nós. E a idéia de poder criar Apps é incrível, poder ajudar pessoas com certas dificuldades criando um App que é capaz de resolver seus problemas.</p>
+            <p>Me chamo Luy Choyan, tenho 25 anos, e começei na area da TI em abril de 2023. Mudei da area da saúde para a área da tecnologia pois a tecnologia sempre me chamaou a atenção, eu com 13/14 anos ja montava e desmontava um pc por completo. Descidi então estudar e mudar para a área da TI. Depois de estudar o os pilares do desenvolvimento web, parti para o meu caminho final o Mobile. O futuro é os dispositivos moveis, pois um dia homem e máquina serão um, tendo em vista que hoje em dia, não podemos ficar sem um dispositivo movel, os celulares ja é praticamente uma extenção de nós. E a idéia de poder criar Apps é incrível, poder ajudar pessoas com certas dificuldades criando um App que é capaz de resolver seus problemas. Atualmente ainda estou estudando Flutter...</p>
         </div>
         <div id="detalhes-intereses">
             <div id="detalhes">
@@ -36,8 +39,14 @@
         </div>
     </main>
     <footer>
-        <h2>Minhas tecnologias</h2>
-        <h2>imagens das minhas abilidades</h2>
+        <h2>SKILLS</h2>
+        <div id="imagens-skills">
+            <img src="../img/html.ico" alt="">
+            <img src="../img/css.ico" alt="">
+            <img src="../img/javascript.ico" alt="">
+            <img src="../img/dart.ico" alt="">
+            <img src="../img/flutter.ico" alt="">
+        </div>
     </footer>
 </body>
 </html>
