--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
             <h2>Sobre mim...</h2>
         </div>
         <div>
-            <p>Me chamo Luy Choyan, tenho 25 anos, e começei na area da TI em abril de 2023. Mudei da area da saúde para a área da tecnologia pois a tecnologia sempre me chamaou a atenção, eu com 13/14 anos ja montava e desmontava um pc por completo. Descidi então estudar e mudar para a área da TI. Depois de estudar o os pilares do desenvolvimento web, parti para o meu caminho final o Mobile. O futuro é os dispositivos moveis, pois um dia homem e máquina serão um, tendo em vista que hoje em dia, não podemos ficar sem um dispositivo movel, os celulares ja é praticamente uma extenção de nós. E a idéia de poder criar Apps é incrível, poder ajudar pessoas com certas dificuldades criando um App que é capaz de resolver seus problemas. Atualmente ainda estou estudando Flutter...</p>
+            <p>Me chamo Luy Choyan, e começei na area da TI em abril de 2023. Mudei da area da saúde para a área da tecnologia pois a tecnologia sempre me chamaou a atenção, eu com 13/14 anos ja montava e desmontava um PC por completo. Descidi então estudar e mudar para a área da TI. Depois de estudar os pilares do desenvolvimento web, parti para o meu caminho final o Mobile. O futuro é os dispositivos moveis, pois um dia homem e máquina serão um, tendo em vista que hoje em dia, não podemos ficar sem um dispositivo movel, os celulares ja é praticamente uma extenção de nós. E a idéia de poder criar Apps é incrível, poder ajudar pessoas com certas dificuldades criando um App que é capaz de resolver seus problemas. Atualmente ainda estou estudando Flutter...</p>
         </div>
         <div id="detalhes-intereses">
             <div id="detalhes">
