--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,7 @@
             <a href="https://www.linkedin.com/in/luy-choyan-siqueira-aa11a2226/" target="_blank"><img src="../img/linkedin.ico" alt="linkedin"></a>
             <a href="https://github.com/luychoyan" target="_blank"><img src="../img/github.ico" alt="github"></a>
         </div>
+        
     </header>
     <main>
         <div>
@@ -31,7 +32,8 @@
         </div>
         <div id="detalhes-intereses">
             <div id="detalhes">
-
+                <p>Fone: (88) 99318-0068</p>
+                <p>E-mail: choyanluy@gmail.com</p>
             </div>
             <div id="intereses">
 
