--- a/html/index.html
+++ b/html/index.html
@@ -41,13 +41,18 @@
         </div>
     </main>
     <footer>
-        <h2>SKILLS</h2>
-        <div id="imagens-skills">
-            <img src="../img/html.ico" alt="">
-            <img src="../img/css.ico" alt="">
-            <img src="../img/javascript.ico" alt="">
-            <img src="../img/dart.ico" alt="">
-            <img src="../img/flutter.ico" alt="">
+        <div id="skills-icones">
+            <h2>SKILLS</h2>
+            <div id="imagens-skills">
+                <img src="../img/html.ico" alt="">
+                <img src="../img/css.ico" alt="">
+                <img src="../img/javascript.ico" alt="">
+                <img src="../img/dart.ico" alt="">
+                <img src="../img/flutter.ico" alt="">
+            </div>
+        </div>
+        <div id="projetos">
+
         </div>
     </footer>
 </body>
